// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMovieDetail Saga should call the getMovieDetailFailure action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getMovieDetail Saga should call the getMovieDetailFailure action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/movie/123?language=en-US&page=1",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`getMovieDetail Saga should dispatch the getMovieDetailSuccess action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getMovieDetail Saga should dispatch the getMovieDetailSuccess action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/movie/123?language=en-US&page=1",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
